--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,88 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="@dimen/_15sdp"
-    android:background="@color/white"
-    android:orientation="vertical"
-    tools:context=".HomeActivity">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <data>
 
-        <ImageView
-            android:id="@+id/iv_detail"
-            android:layout_width="@dimen/_30sdp"
-            android:layout_height="@dimen/_30sdp"
-            android:src="@drawable/details"
-            android:tint="@color/orange"
-            android:padding="@dimen/_5sdp"
-            android:layout_alignParentRight="true"/>
+        <variable
+            name="viewModel"
+            type="com.example.testapplication.viewmodel.HomeViewmodel" />
+    </data>
 
-    </RelativeLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hello,"
-            android:textColor="@color/darker_gray"
-            android:textSize="@dimen/_20sdp" />
-
-        <TextView
-            android:id="@+id/tv_user_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_5sdp"
-            android:layout_marginLeft="@dimen/_5sdp"
-            android:textColor="@color/orange"
-            android:textSize="@dimen/_25sdp" />
-
-    </LinearLayout>
-
-    <LinearLayout
+    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:layout_marginStart="@dimen/_5sdp"
-        android:layout_marginLeft="@dimen/_5sdp"
-        android:text="Welcome to FireStore Demo"
-        android:textColor="@color/orange"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:textSize="@dimen/_15sdp"/>
+        android:background="@color/white"
+        android:orientation="vertical"
+        android:padding="@dimen/_15sdp"
+        tools:context=".HomeActivity">
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
+            <ImageView
+                android:id="@+id/iv_detail"
+                android:layout_width="@dimen/_30sdp"
+                android:layout_height="@dimen/_30sdp"
+                android:layout_alignParentRight="true"
+                android:padding="@dimen/_5sdp"
+                android:src="@drawable/details"
+                android:tint="@color/orange" />
 
-        <TextView
-            android:id="@+id/tv_logout"
+        </RelativeLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/_30sdp"
-            android:layout_marginTop="@dimen/_30sdp"
-            android:layout_marginRight="@dimen/_30sdp"
-            android:layout_marginBottom="@dimen/_10sdp"
-            android:background="@drawable/button_back"
+            android:layout_gravity="center"
             android:gravity="center"
-            android:padding="@dimen/_10sdp"
-            android:text="@string/logout"
-            android:textAllCaps="true"
-            android:textColor="@color/white"
-            android:textSize="@dimen/_15sdp" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Hello,"
+                android:textColor="@color/darker_gray"
+                android:textSize="@dimen/_20sdp" />
+
+            <TextView
+                android:id="@+id/tv_user_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_5sdp"
+                android:layout_marginLeft="@dimen/_5sdp"
+                android:textColor="@color/orange"
+                android:textSize="@dimen/_25sdp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_gravity="center"
+                android:layout_marginStart="@dimen/_5sdp"
+                android:layout_marginLeft="@dimen/_5sdp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="Welcome to FireStore Demo"
+                android:textColor="@color/orange"
+                android:textSize="@dimen/_15sdp" />
 
 
+            <TextView
+                android:id="@+id/tv_logout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/_30sdp"
+                android:layout_marginTop="@dimen/_30sdp"
+                android:layout_marginRight="@dimen/_30sdp"
+                android:layout_marginBottom="@dimen/_10sdp"
+                android:background="@drawable/button_back"
+                android:gravity="center"
+                android:padding="@dimen/_10sdp"
+                android:text="@string/logout"
+                android:textAllCaps="true"
+                android:textColor="@color/white"
+                android:textSize="@dimen/_15sdp" />
+
+
+        </LinearLayout>
     </LinearLayout>
-</LinearLayout>
+
+</layout>
